--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         </section>
         
         <div class="footer">
-            <p>Made with ♥ using <a href="https://carrd.co" target="_blank">Carrd</a></p>
+            <p>Made with ♥ </p>
         </div>
     </div>
 </body>
